feat(api): add api service (#4)
